# wikipedia-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  ci.yml  disambiguation.yml  emoji-symbols.yml  flags-and-topics.yml  force-language.yml  get.yml  homebrew.yml  interactive.yml  json.yml  languages.yml  release.yml  search.yml  showcase.yml
src/: interactive.rs  lang.rs  main.rs  output.rs  wiki.rs
